# r_vulkan

./: .gitignore  Cargo.toml  Makefile  TODO.txt  shaders.mk
asset/: Cargo.toml
asset/src/: lib.rs
asset/src/asset/: mod.rs  path_defs.rs
asset/src/source/: local_file.rs  mod.rs
assets/models/wavefront/: cube.mtl  sphere.mtl
assets/shaders/: texture.vert
renderer/: Cargo.toml
renderer/shader/texture/: vert.spv
renderer/src/: lib.rs  main.rs  shaders.rs  vulkan.rs  vulkan.rs.bak  window.rs
renderer/src/importer/: mod.rs  wavefront.rs
renderer/src/importer/testdata/: wavefront_bad_indeces.txt  wavefront_bad_normals.txt  wavefront_bad_positions.txt  wavefront_bad_textures.txt  wavefront_good_indeces.txt  wavefront_good_normals.txt  wavefront_good_positions.txt  wavefront_good_textures.txt  wavefront_positions.txt  wavefront_textures.txt
renderer/src/model/: material.rs  mod.rs  model_manager.rs  primitives.rs  vertex.rs
renderer/src/system/: event_loop.rs  mod.rs  window.rs
spikes/: Cargo.toml
