[package]
name = "renderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = { version = "0.38.0", features = ["linked"] }
ash-window = "0.13.0"
image = "0.25.1"
winit = { version = "0.29", features = ["rwh_06"] }
